[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprite/smg_bullet.png" type="Texture" id=1]
[ext_resource path="res://scripts/weapons/Bullet.gd" type="Script" id=2]
[ext_resource path="res://sprite/light.png" type="Texture" id=3]
[ext_resource path="res://audio/env/hit_wall.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/env/hit_flesh.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.53125, 0.5 )

[sub_resource type="ParticlesMaterial" id=2]
lifetime_randomness = 1.0
flag_disable_z = true
spread = 180.0
flatness = 0.89
gravity = Vector3( -5, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 1.0
angle = 720.0
angle_random = 1.0
scale = 2.0
scale_random = 1.0
color = Color( 0.662745, 0.388235, 0.141176, 1 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 1.0
flag_disable_z = true
spread = 180.0
flatness = 0.89
gravity = Vector3( -5, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 1.0
angle = 720.0
angle_random = 1.0
scale = 3.0
scale_random = 1.0
color = Color( 0.858824, 0.109804, 0.109804, 1 )

[node name="Bullet" type="Area2D"]
collision_layer = 16
collision_mask = 14
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -6, -7 )
texture = ExtResource( 1 )
centered = false

[node name="Light2D" type="Light2D" parent="Sprite"]
position = Vector2( 7.54567, 7.54283 )
texture = ExtResource( 3 )
texture_scale = 0.01
energy = 0.5
mode = 2

[node name="KillTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="hit_wall" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="hit_flesh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.52344, 0.5 )
shape = SubResource( 1 )

[node name="wall_particle" type="Particles2D" parent="."]
position = Vector2( -1.35172, 0.47126 )
emitting = false
amount = 4
speed_scale = 3.0
process_material = SubResource( 2 )

[node name="blood_particle" type="Particles2D" parent="."]
position = Vector2( -1.35172, 0.47126 )
emitting = false
amount = 4
speed_scale = 3.0
process_material = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
